--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,3 +15,12 @@
 
 // Icon
 @import "../components/Icon/style";
+
+// Input
+@import "../components/Input/style";
+
+// Upload
+@import "../components/Upload/style";
+
+//progress
+@import "../components/Progress/style";
